--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "DaisyBOT",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "mjs": "tsc -d && mv dist/index.js dist/index.mjs",
+    "cjs": "tsc -m commonjs",
+    "build": "npm run mjs && npm run cjs",
+    "start": "npm run build && node -r dotenv/config ./dist/index.mjs"
   },
   "repository": {
     "type": "git",
@@ -18,6 +26,14 @@
   },
   "homepage": "https://github.com/jinocenc/DaisyBOT#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.0.2"
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "typescript": "^3.9.3"
+  },
+  "dependencies": {
+    "@types/node": "^14.0.6",
+    "@typescript-eslint/parser": "3.0.0",
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
+    "eslint": "5.0.0"
   }
 }
