--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "DaisyBOT",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/",
+  "main": "./main.js",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "type": "module",
   "scripts": {
     "mjs": "tsc -d && mv dist/index.js dist/index.mjs",
-    "cjs": "tsc -m commonjs",
-    "build": "npm run mjs && npm run cjs",
-    "start": "npm run build && node -r dotenv/config ./dist/index.mjs"
+    "cjs" : "tsc -d",
+    "build" : "npm run cjs",
+    "start" : "npm run build && node --es-module-specifier-resolution=node -r dotenv/config ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -30,10 +28,7 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
-    "@types/node": "^14.0.6",
-    "@typescript-eslint/parser": "3.0.0",
     "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0",
-    "eslint": "5.0.0"
+    "dotenv": "^8.2.0"
   }
 }
