--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN = "NzE2NzYyOTg2MzYxOTEzNDY0.XtQh_A.o9gSc77hEAOvLx3Mr6eh7knPMn8"
+BOT_TOKEN = "NzE2NzYyOTg2MzYxOTEzNDY0.XtTGZQ.CZNx1t8gcZAqV-uVK1OR-bDgXBU"
 LOV_GUILD_ID = "699459351278256198"
 DAISY_CHANNEL_ID = "716772061686792246" 
