--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "./main.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "type": "module",
   "scripts": {
     "mjs": "tsc -d && mv dist/index.js dist/index.mjs",
-    "cjs" : "tsc -d",
-    "build" : "npm run cjs",
-    "start" : "npm run build && node --es-module-specifier-resolution=node -r dotenv/config ./dist/index.js"
+    "cjs": "tsc -d",
+    "build": "npm run cjs",
+    "start": "nohup node --es-module-specifier-resolution=node -r dotenv/config ./dist/index.js> /dev/null 2>&1 ",
+    "deploy": "bash ./scripts/deploy.sh"
   },
   "repository": {
     "type": "git",
@@ -25,10 +28,16 @@
   "homepage": "https://github.com/jinocenc/DaisyBOT#readme",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.0",
+    "eslint": "^5.0.0",
     "typescript": "^3.9.3"
   },
   "dependencies": {
     "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "firebase": "^7.14.6",
+    "firebase-admin": "^8.12.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   }
 }
