--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "moduleResolution": "node",
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
+    "resolveJsonModule" : true,
   }
 }
